@@ -1,3 +1,9 @@
+2007-02-21  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
+
+	* src/exmpp_jid.erl: Add support for JID comparison.
+
+	* testsuite/check_jid.erl: Add JID comparison testsuite.
+
 2007-02-20  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/exmpp_stringprep.erl: Catch up with original `stringprep' level
